--- a/Mazesolver/MazeSolver/MazeSolver.csproj
+++ b/Mazesolver/MazeSolver/MazeSolver.csproj
@@ -60,6 +60,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Solver.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -68,6 +69,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="BackTracking.cs" />
     <Compile Include="Cell.cs" />
     <Compile Include="DeadEndFilling.cs" />
     <Compile Include="ISolver.cs" />
